# MinimalistiCliWithoutSlicer

./: CMakeLists.txt  MinimalistiCliWithoutSlicer.cxx  MinimalistiCliWithoutSlicer.xml  README.md
